# memeboys-2007-bot-rs

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
src/: bot.rs  commands.rs  config.rs  main.rs
src/commands/: age.rs  coinflip.rs  memeroll.rs  react.rs  register.rs  stats.rs
