[package]
name = "memebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.189", features = ["derive"]}
serde_json = "1.0.107"
tokio = {version = "1.33", features = ["macros", "rt-multi-thread"]}
poise = "0.5.6"
rand = "0.8.5"
shuttle-runtime = "0.29"
shuttle-secrets = "0.29"
shuttle-poise = "0.29"

[dependencies.serenity]
version = "0.11"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
git = "https://github.com/GorgWorgington/serenity"
branch = "identify-presence"
